# YoloV8-LSTM-video-Classification

./: .dockerignore  .gitignore  Dockerfile  JenkinsFile  Jenkinsfile  LICENSE  README.md  Requirements.txt  docker-compose.yml  index.html  lstm.ipynb  main.py  model.ipynb  model1.ipynb  models.ipynb  package-lock.json  package.json  perfect.ipynb  pyproject.toml  requirements.txt  s.ipynb  streamlit_app.py
.streamlit/: config.toml
app/: extract.py
assets/: index-3lIEP7vv.js  index-Cb_tUZR4.css  index-DybKvLAw.js
backend/: Dockerfile  config.py  fast_api.py  interaction.py  main.py  pipeline.py  pyproject.toml  requirements.txt  streamlit_app.py
backend/data_extraction/: interaction_analyzer.py  person_tracker.py
backend/feature_extraction/: extractor.py
backend/pipelines/: video_preprocessor.py
backend/preprocessing/: preprocessor.py
backend/services/feature_extraction/: extractor.py
backend/services/prediction/: predictor.py
backend/services/preprocessing/: preprocessor.py
backend/services/video_data_extraction/: video_preprocessor.py
backend/services/video_processing/: processor.py
backend/utils/: csv_utils.py  data_into_graph.py  data_into_pyg.py  data_preprocessing.py  feature_extraction.py  gnnlstm.py  gpu.py  id_utils.py  interaction_utils.py  iou_utils.py  motion_utils.py  preprocessor.py  visualizer.py
extracted_feature_data/: output_features.csv  sample.csv
flask_app/: main.py
frontend/: Dockerfile  extract.py  package-lock.json  package.json  requirements.txt  vite.config.ts
notebooks/: data_extraction.ipynb  models.ipynb
(+179 files in other folders)
